fixed the z-index on the navBar modal

--- a/client/src/Pages/Main/Main.css
+++ b/client/src/Pages/Main/Main.css
@@ -34,7 +34,7 @@ height: 750px
     width: 30%; 
     top: 40%; 
     left: 10%; 
-    z-index: 26
+    z-index: 5
 }
 
 #mainSubSectionDivideTwo {
